playgrounds/devops/kubernetes/oranagwa-nginx-ingress/nginx-controller.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        k8s-app: nginx-ingress-lb
    spec:
      containers:
        - name: nginx-ingress-controller
          image: 'gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.5'
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    k8s-app: nginx-ingress-lb
