playgrounds/devops/kubernetes/oranagwa-nginx-ingress/ingress-tutorial.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tutorial
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: myminikube.info
      http:
        paths:
          - path: /
            backend:
              serviceName: echoserver
              servicePort: 8080
    - host: cheeses.all
      http:
        paths:
          - path: /stilton
            backend:
              serviceName: stilton-cheese
              servicePort: 80
          - path: /cheddar
            backend:
              serviceName: cheddar-cheese
              servicePort: 80
